--- a/Views/invAdj/Index.cshtml
+++ b/Views/invAdj/Index.cshtml
@@ -75,22 +75,20 @@
                    { label: 'InventoryTxTypeId',name: 'inventoryTxTypeId',hidden:true, editable: true,editoptions: { readonly: 'readonly'}},
                    { label: 'Sa Code',name: 'saCode',hidden:true, editable: true,editoptions: { readonly: 'readonly'}},
                    { label: 'Date',name: 'date',fixed:true,hidden:true, edittype:"text",editoptions: { readonly: 'readonly'}},
-                   { label: 'Supplier',name: 'supplierId',fixed:true,editable: true, edittype:"select",formatter:'select', editoptions: { value:getSupplierNames(),
-                   dataInit: function(elem) { name=$(elem).val();curRowId = $('#invAdj').getGridParam('selrow'); },
-                   dataEvents: [{ type: 'change', fn:function (elem) { name = $(elem.target).val(); fieldfunctions(curRowId);   } }]
+                   { label: 'Product Name',name: 'productName',fixed:true,editable: true,editrules: { required: true,custom:true, custom_func:IsProduct },                                                             
+                    editoptions: { value:getProductName(),
+                                  dataInit: function(elem) {
+                    curRowId = $('#saDamageRecoup').getGridParam('selrow');
+                    $(elem).select();
+                    $(elem).autocomplete({source: ProductNameList,autoFocus: true,minLength: 0, select:function (event, ui) {
+                    $('#saDamageRecoup').jqGrid('setCell',curRowId,'supplierName', getSupplierNames(ui.item.value));
+                    $('input#supplierName').val(getSupplierNames(ui.item.value));
+                    $('#saDamageRecoup').jqGrid('setCell',curRowId,'productSku', getProductSku(ui.item.value));
+                    $('input#productSku').val(getProductSku(ui.item.value));
+                    } });   
+                                  }
                    }},
-                   { label: 'Product Name',name: 'productName',fixed:true,editable:true,editrules: { required: true,custom:true, custom_func:IsProduct },                                                             
-                    editoptions: { 
-                   // dataInit: function(elem) {
-                   // curRowId = $('#invAdj').getGridParam('selrow');   
-                   // //$(elem).select();
-                   // console.log( getProductName(name));
-                   // $(elem).autocomplete({source: getProductName(name),autoFocus: true,minLength: 0, select:function (event, ui) {
-                   // $('#invAdj').jqGrid('setCell',curRowId,'productSku',getProductSku(ui.item.value));
-                   // $('input#productSku').val(getProductSku(ui.item.value));   
-                   // }});   
-                   //}
-                   }},
+                   { label: 'Supplier',name: 'supplierName',fixed:true,editable: true, edittype:"text", editoptions: {readonly: 'readonly'}},
                    { label: 'Product Sku',name: 'productSku',fixed:true,width:80,editable: true, edittype:"text", editoptions: {readonly: 'readonly'}},
                    { label: 'Locations',name: 'inventoryLocationId',fixed:true,width:80, editable: true, edittype:"select",formatter:'select',editrules: { required: true }, editoptions:{value:getLocation()}},
                    { label: 'Updated Stock',name: 'amount',fixed:true,width:95,align:"right",editable: true, edittype:"text",editrules: { required: true, number: true }},
@@ -157,9 +155,7 @@
       
        $('#invAdj').setGridWidth(parseInt($(window).width()) - 20);
 
-       $("#Supplier").on('change', function () {
-          console.log('hi');
-       });
+
 
        $("#save").on('click', function () {
            SaveHeader();
@@ -195,16 +191,7 @@
             }
 
        }
-function fieldfunctions(id){
-    $( "#"+id+"_productName").autocomplete({
-        source: getProductName(name),
-        minLength: 2,
-        select: function(event, ui) {
-           $('#invAdj').jqGrid('setCell',curRowId,'productSku',getProductSku(ui.item.value));
-           $('input#productSku').val(getProductSku(ui.item.value));   
-        }
-    });
-}
+
 
        function date()
        {
