--- a/Views/SaInternalTransfer/Index.cshtml
+++ b/Views/SaInternalTransfer/Index.cshtml
@@ -10,13 +10,13 @@
 </div>
 <fieldset class="scheduler-border"  style="max-height: 18rem;">
 <div class="container-flow">
-    <div class="row p-1">
+    <div class="row">
         <div class="col-lg-2 form-group">
             <label style="font-size:8px;" for="date">Transaction Date:</label>
             <input style="font-size:10px;" type="date" id="date" name="date">
         </div>
     </div>
-    <div class="row p-1">
+    <div class="row">
         <div class="col-lg-2 form-group">
              <select style="font-size:10px;" class="form-control" id="fromLocationsDropdown" name="fromLocationsDropdown"></select>   
         </div>
@@ -25,7 +25,7 @@
                     <select style="font-size:10px;" class="form-control" id="toLocationsDropdown" name="toLocationsDropdown"></select> 
              </div>
     </div>
-    <div class="row p-1">
+    <div class="row">
         <div class="col-lg-5 form-group">
             <input style="font-size:10px;" type="text" class="form-control" placeholder="Notes:" aria-label="Notes:" aria-describedby="basic-addon2" id="comments"/>
         </div>
