--- a/Views/InvTxSummary/Index.cshtml
+++ b/Views/InvTxSummary/Index.cshtml
@@ -11,7 +11,7 @@
 <fieldset class="scheduler-border">
  <div class="container-flow">
   
-      <div class="row p-1">
+      <div class="row">
            <div class="col-lg-3  form-group">
                 <label for="startDate"  style="font-size:8px;"> Start Date Range:</label>
                 <input type="date" value="" style="font-size:10px;" id='startDate' name="startDate" />
