--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@
                                  <a class="dropdown-item" asp-area="" asp-controller="FulfillSales" asp-action="Index">Fulfill Sales</a>
                                  <a class="dropdown-item" asp-area="" asp-controller="CustomerOrder" asp-action="Index">Customer Order</a>
                                  <a class="dropdown-item" asp-area="" asp-controller="CustomerSummary" asp-action="Index">Customer Summary</a>
+                                 <a class="dropdown-item" asp-area="" asp-controller="Inventory" asp-action="Index">Inventory</a>
                             </div>
                          </li>                
                          <li class="nav-item dropdown">
@@ -53,7 +54,7 @@
                                  <a class="dropdown-item" asp-area="" asp-controller="Supplier" asp-action="Index">Supplier</a>
                                  <a class="dropdown-item" asp-area="" asp-controller="Products" asp-action="Index">Product</a>
                                  <a class="dropdown-item" asp-area="" asp-controller="Customers" asp-action="Index">Customer</a>
-                             </div>
+                            </div>
                          </li> 
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
